--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
   "dependencies": {
     "@react-email/components": "^0.0.41",
     "@react-email/render": "^1.1.2",
-    "nodemailer": "^7.0.3",
-    "react": ">=16.0.0"
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
