--- a/package.json
+++ b/package.json
@@ -1,35 +1,67 @@
 {
   "name": "email-service-package",
   "version": "1.0.0",
-  "description": "Complete email service with React Email templates and Nodemailer",
+  "description": "Complete email service with React Email templates and Nodemailer - send beautiful, responsive emails using React components with full TypeScript support",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
+      "import": "./dist/index.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/index.ts",
     "clean": "rimraf dist",
-    "prepublishOnly": "npm run clean && npm run build",
+    "prebuild": "npm run clean",
+    "prepublishOnly": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "test:verbose": "jest --verbose",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "lint": "tsc --noEmit",
+    "postversion": "git push && git push --tags"
   },
   "keywords": [
     "email",
     "nodemailer",
     "react-email",
     "typescript",
-    "smtp"
+    "smtp",
+    "email-templates",
+    "transactional-email",
+    "email-service",
+    "react-components",
+    "html-email",
+    "email-delivery",
+    "email-automation",
+    "responsive-email",
+    "email-client"
   ],
-  "author": "skerouac",
+  "author": {
+    "name": "skerouac"
+  },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/skerouac/email-service.git"
+  },
+  "homepage": "https://github.com/skerouac/email-service#readme",
+  "bugs": {
+    "url": "https://github.com/skerouac/email-service/issues"
+  },
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "README.md",
+    "LICENSE"
   ],
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   },
   "peerDependencies": {
     "react": ">=16.0.0"
@@ -49,8 +81,12 @@
     "@types/react": "^19.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
